<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="racecar@todo.todo">racecar</maintainer>
  <license>TODO: License declaration</license>

  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>ackermann_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf2_ros</depend>
  </export>
</package>
